--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
+    "@wagmi/core": "^2.13.8",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sonner": "^1.5.0",
+    "viem": "^2.21.16"
   },
   "devDependencies": {
     "@types/node": "^20",
