--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "@tanstack/react-query": "^5.59.0",
     "@wagmi/core": "^2.13.8",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "sonner": "^1.5.0",
-    "viem": "^2.21.16"
+    "viem": "^2.21.18",
+    "wagmi": "^2.12.17"
   },
   "devDependencies": {
     "@types/node": "^20",
